force-app/main/default/objects/VerdeAmancoKit__c/VerdeAmancoKit__c.object-meta.xml
<CustomObject>
    <description>[###][VerdeAmancoKit__c]</description>
    <label>Kit Verde Amanco</label>
    <nameField>
        <label>Nome de Kit Verde Amanco</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kits Verde Amanco</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>