force-app/main/default/objects/VerdeAmancoKit__c/fields/ActiveBln__c.field-meta.xml
<CustomField>
    <fullName>ActiveBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>