force-app/main/default/objects/VerdeAmancoKit__c/fields/ActiveTxt__c.field-meta.xml
<CustomField>
    <fullName>ActiveTxt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>