force-app/main/default/objects/VerdeAmancoKit__c/fields/ChannelLkp__c.field-meta.xml
<CustomField>
    <fullName>ChannelLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canal</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Kits Verde Amanco</relationshipLabel>
    <relationshipName>VerdeAmancoKits</relationshipName>
    <type>Lookup</type>
</CustomField>