force-app/main/default/objects/VerdeAmancoKit__c/validationRules/EnableVerdeAmancoKit.validationRule-meta.xml
<ValidationRule>
    <fullName>EnableVerdeAmancoKit</fullName>
    <active>false</active>
    <description>Só permite ativar um Kit Verde Amanco caso, para o Canal correspondente, não exista outro Kit ativo.</description>
    <errorConditionFormula>AND(ChannelLkp__r.ActiveVerdeAmancoKitLkp__c  &lt;&gt; Null, ChannelLkp__r.ActiveVerdeAmancoKitLkp__c  &lt;&gt;  Id,  ActiveBln__c  = True)</errorConditionFormula>
    <errorDisplayField>ActiveBln__c</errorDisplayField>
    <errorMessage>Já existe um Kit ativo para o Canal correspondente. Para ativar este Kit você deve, primeiramente, desativar o Kit marcado como ativo.</errorMessage>
</ValidationRule>