force-app/main/default/objects/VerdeAmancoKit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ChannelLkp__c</columns>
    <columns>ActiveBln__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>